--- a/templates/index.html
+++ b/templates/index.html
@@ -204,13 +204,13 @@
         <div class="eyebrow">專題簡介</div>
         <h2>模擬驗證 IDS/IPS 防禦效能之研究</h2>
         <p>
-          本專題旨在開發一個「模擬驗證 IDS/IPS 防禦效能」的測試平台。
-          平台透過惡意程式樣本的特徵分析與模擬攻擊機制，提供一個可供使用者下載輕量化 測試 Agent 的網站。
-          使用者只需執行該 Agent，即可模擬多種攻擊行為，平台端會即時接收並分析相關封包資料，協助使用者檢視其 IDS/IPS 是否能正確偵測與防禦攻擊。
-          透過本系統，企業與研究人員可：          
-           1. 驗證防禦設備的偵測與攔截能力          
-           2. 分析防禦規則的有效性          
-           3. 針對測試結果進行調整與強化          
+          本專題旨在開發一個「模擬驗證 IDS/IPS 防禦效能」的測試平台。<br>
+          平台透過惡意程式樣本的特徵分析與模擬攻擊機制，提供一個可供使用者下載輕量化 測試 Agent 的網站。<br>
+          使用者只需執行該 Agent，即可模擬多種攻擊行為，平台端會即時接收並分析相關封包資料，協助使用者檢視其 IDS/IPS 是否能正確偵測與防禦攻擊。<br>
+          透過本系統，企業與研究人員可：<br>          
+           1. 驗證防禦設備的偵測與攔截能力<br>          
+           2. 分析防禦規則的有效性<br> 
+           3. 針對測試結果進行調整與強化<br>    
           我們期望藉由這項研究，讓資安測試變得更簡單、更實用，協助企業在攻擊發生前就能主動強化防禦，提升整體網路安全防護力。
         </p>
       </div>
