--- a/templates/index.html
+++ b/templates/index.html
@@ -291,7 +291,7 @@
               <h2>A</h2>
               <p>敘述</p>
               {% if session is defined and session.get('user') %}
-                <a class="cta" href="/download_agent?platform=windows">下載 agent (改)</a>
+                <a class="cta" href="/download_agent2?platform=windows">下載 agent (改)</a>
                 <a class="cta" href="/view" style="margin-left:8px;">查看事件清單 → (改)</a>
               {% else %}
                 <a class="cta" href="/login?next=/downloads/agent.exe">登入後才可下載 (改)</a>
