--- a/templates/index.html
+++ b/templates/index.html
@@ -294,7 +294,7 @@
                 <a class="cta" href="/download_agent2?platform=windows">下載 agent (改)</a>
                 <a class="cta" href="/view" style="margin-left:8px;">查看事件清單 → (改)</a>
               {% else %}
-                <a class="cta" href="/login?next=/downloads/agent.exe">登入後才可下載 (改)</a>
+                <a class="cta" href="/login?next=/downloads/agent2.exe">登入後才可下載 (改)</a>
                 <a class="cta" href="/login?next=/view" style="margin-left:8px;">登入後查看事件清單 (改)</a>
               {% endif %}
             </div>
