--- a/templates/index.html
+++ b/templates/index.html
@@ -305,10 +305,10 @@
               <h2>B</h2>
               <p>敘述</p>
               {% if session is defined and session.get('user') %}
-                <a class="cta" href="/download_agent?platform=linux">下載 agent(改)</a>
+                <a class="cta" href="/download_agent2?platform=linux">下載 agent(改)</a>
                 <a class="cta" href="/view" style="margin-left:8px;">查看事件清單 → (改)</a>
               {% else %}
-                <a class="cta" href="/login?next=/downloads/agent-linux">登入後才可下載 (改)</a>
+                <a class="cta" href="/login?next=/downloads/agent2-linux">登入後才可下載 (改)</a>
                 <a class="cta" href="/login?next=/view" style="margin-left:8px;">登入後查看事件清單 (改)</a>
               {% endif %}
 
