--- a/templates/index.html
+++ b/templates/index.html
@@ -210,7 +210,7 @@
         </p>
       </div>
       <div>
-        <img src="{{ url_for('static', filename='images/banner.jpg') }}" 
+        <img src="{{ url_for('static', filename='images/image.jpg') }}" 
              alt="流程圖" 
              style="width:100%;border:2px solid var(--black-line);border-radius:8px;">
       </div>
