Replace '封包長度' with '來自事件' in view.html

--- a/templates/view.html
+++ b/templates/view.html
@@ -68,7 +68,7 @@
     <tr>
       <th>執行時間 (UTC)</th>
       <th>封包內容</th>
-      <th>封包長度</th>
+      <th>來自事件</th>
     </tr>
   </thead>
   <tbody>
