Change payload to payload_sample in view template

--- a/templates/view.html
+++ b/templates/view.html
@@ -75,7 +75,7 @@
     {% for r in rows %}
     <tr>
       <td>{{ r.ts }}</td>
-      <td>{{ r.payload }}</td>
+      <td>{{ r.payload_sample }}</td>
       <td>{{ r.payload_len }}</td>
     </tr>
     {% else %}
